bpo-29532: Altering a kwarg dictionary passed to functools.partial() (#190)

no longer affects a partial object after creation.